--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+  <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header has-drawer is-upgraded" data-upgraded=",MaterialLayout">
+  <app-header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600 is-casting-shadow">
+    </app-header>
+    <app-sidebar>
+      </app-sidebar>
+       <app-main class="mdl-layout__content mdl-color--grey-100">
+       <app-dashboard></app-dashboard>
+      </app-main>
+     </div>
+` 
