--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,6 +22,10 @@
       [ngModel]="allSelected" > <label for="">{{obj}}</label>
 
    </div>
+
+   <div>
+     
+   </div>
 </li>
 <!--<div *ngFor="#item of hoursOftheDay; #i = index">
     <label> <input type="checkbox" id="id" [ngModel] ="partialSelected"> {{item.label}}</label><br />
