--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,50 +1,25 @@
- <div class="demo-avatar-dropdown">
-             <h6>Payment Processing</h6>
-            <span>Range</span>
-            <div class="mdl-layout-spacer"></div>
+<div class="demo-avatar-dropdown">
+  <h6>Payment Processing</h6>
+  <span>Range</span>
+  <div class="mdl-layout-spacer"></div>
 
 </div>
 <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
 
-<!--<hr>
 
-<label> <input type="checkbox" (change)="selectAll()"> All</label><br />
+  <label> <input type="checkbox" (change)="selectAll()"> All</label><br />
 
-<div *ngFor="#iobj of objectArray; #i = index">
-    <label> <input type="checkbox" id="id" [ngModel] ="allSelected"> {{item.label}}</label><br />
-    
-</div>-->
-<label> <input type="checkbox" (change)="selectAll()"> All</label><br />
-
-<li *ngFor="#obj of objectArray">
-   <div class="small" data-value="option1" tabIndex="-1">
-      <input type="checkbox" (change)="expression && expression[obj.name] = $event.target.checked ? true : undefined" 
-      [ngModel]="allSelected" > <label for="">{{obj}}</label>
-
-   </div>
-
-   <div>
-     <select (change)="selectedActionChange($event)">
-				<input type="checkbox" *ngFor="#opt of optionList">{{ opt }}</input>
-				</select>
-              <div>
-                <label>Import Test</label>
-                <br />
-                <input type="checkbox" checked (change)="headerCheckboxChanged($event)"/>
-              </div>
-      
-          <child *ngFor="#test of testList" [test]="test" [checkboxValue]="masterCheckboxValue" [selectedAction]="masterSelectAction"
-          (action)="actionChange($event)" (checked)="checkedChanged($event)"></child>
-
-   </div>
-</li>
-<!--<div *ngFor="#item of hoursOftheDay; #i = index">
-    <label> <input type="checkbox" id="id" [ngModel] ="partialSelected"> {{item.label}}</label><br />
-    <thead> <label> <input type="checkbox" id="id" [ngModel] ="partialSelected"> {{item.label}}</label><br />
-    </thead>
-</div>-->
+  <li *ngFor="#obj of objectArray">
+    <label for="">
+      <input type="checkbox" (change)="expression && expression[obj.name] = $event.target.checked ? true : undefined" [ngModel]="allSelected"> 
+        {{obj}}
+    </label>
+    <!--<div>
+      <div (change)="selectedActionChange($event)">
+        <input type="checkbox" *ngFor="#opt of optionList" />{{ opt }}
+      </div>
+    </div>-->
+  </li>
 
 
 </nav>
-
-
