--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header ">
+  <header class="mdl-layout__header mdl-color--blue-grey-600 mdl-color-text--blue-grey-50">
     <div class="mdl-layout__header-row">
       <div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button">
         <i class="material-icons">menu</i>
