--- a/src/app/search/tree/tree-node/tree-node.component.html
+++ b/src/app/search/tree/tree-node/tree-node.component.html
@@ -1,3 +1,3 @@
 <label>
-  <input type="checkbox" [(ngModel)]="value" (change)="checkChanged()" /> {{ name }}
+  <input type="checkbox" [(ngModel)]="value" (change)="checkChanged()" />{{id}} {{ name }}
 </label>
