--- a/src/app/search/tree/tree.component.html
+++ b/src/app/search/tree/tree.component.html
@@ -22,11 +22,11 @@
       </div>
     </div>-->
 
-    <li *ngFor="let time of myData">
+    <li *ngFor="let time of myData; let group = index">
         {{time.name}}
         <ul>
-          <li *ngFor="let item of time.values" >
-            <tree-node [name]="item.name" [value]="true" (checked)="checked()"></tree-node>
+          <li *ngFor="let item of time.values let index = index">
+            <tree-node [group]="group" [index]="index" [name]="item.name" [value]="true" (checked)="checked($event)"></tree-node>
           </li>
           <br />
         </ul>
